# algebra_challenge

./: .gitignore  CMakeLists.txt  Doxyfile  Endpoint.cpp  Endpoint.h  Makefile  README.md  Raceway.h  Segment.cpp  Segment.h  TestData.h  Vector.cpp  Vector.h  compute_supports.cpp  compute_supports.h  main.cpp  tests.cpp  tests.h
.github/workflows/: cmake.yml
doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _endpoint_8cpp.html  _endpoint_8cpp_8o_8d.html  _endpoint_8cpp_8o_8d_source.html  _endpoint_8cpp__incl.map  _endpoint_8cpp__incl.md5  _endpoint_8cpp_source.html  _endpoint_8h.html  _endpoint_8h.js  _endpoint_8h__dep__incl.map  _endpoint_8h__dep__incl.md5  _endpoint_8h__incl.map  _endpoint_8h__incl.md5  _endpoint_8h_source.html  _r_e_a_d_m_e_8md.html  _raceway_8cpp.html  _raceway_8cpp_8o_8d.html  _raceway_8cpp_8o_8d_source.html  _raceway_8cpp__incl.map  _raceway_8cpp__incl.md5  _raceway_8cpp_source.html  _raceway_8h.html  _raceway_8h__dep__incl.map  _raceway_8h__dep__incl.md5  _raceway_8h__incl.map  _raceway_8h__incl.md5  _raceway_8h_source.html  _segment_8cpp.html  _segment_8cpp_8o_8d.html  _segment_8cpp_8o_8d_source.html  _segment_8cpp__incl.map  _segment_8cpp__incl.md5  _segment_8cpp_source.html  _segment_8h.html  _segment_8h.js  _segment_8h__dep__incl.map  _segment_8h__dep__incl.md5  (+663 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+109 more)
doc/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _endpoint_8cpp.tex  _endpoint_8cpp_8o_8d.tex  _endpoint_8cpp__incl.md5  _endpoint_8h.tex  _endpoint_8h__dep__incl.md5  _endpoint_8h__incl.md5  _raceway_8cpp.tex  _raceway_8cpp_8o_8d.tex  _raceway_8cpp__incl.md5  _raceway_8h.tex  _raceway_8h__dep__incl.md5  _raceway_8h__incl.md5  _segment_8cpp.tex  _segment_8cpp_8o_8d.tex  _segment_8cpp__incl.md5  _segment_8h.tex  _segment_8h__dep__incl.md5  _segment_8h__incl.md5  _test_data_8cpp.tex  _test_data_8cpp_8o_8d.tex  _test_data_8cpp__incl.md5  _test_data_8h.tex  _test_data_8h__dep__incl.md5  _test_data_8h__incl.md5  _vector_8cpp.tex  _vector_8cpp_8o_8d.tex  _vector_8cpp__incl.md5  _vector_8h.tex  _vector_8h__dep__incl.md5  _vector_8h__incl.md5  _vector_8h_aae1dd2d7950b0514b0fa4f1b0daa9a01_icgraph.md5  annotated.tex  catch_8hpp.tex  catch_8hpp__incl.md5  class_catch_1_1_assertion_handler.tex  class_catch_1_1_assertion_handler_a1e839d810f6ac0fa6d127fe8350175ed_cgraph.md5  class_catch_1_1_assertion_handler_a2ef387e567bad90ec6e4b5bf5c367388_cgraph.md5  class_catch_1_1_binary_expr.tex  (+376 more)
include/: Format.h  Geometry.h  Math.h  Matrix.h  Raceway.h  Segment.h  SupportsService.h  Utils.h  Vector.h  compute_supports.h
src/: Format.cpp  Geometry.cpp  Math.cpp  Matrix.cpp  Raceway.cpp  Segment.cpp  Utils.cpp  Vector.cpp  compute_supports.cpp
tests/: TestData.cpp  test0001.cpp  test0002.cpp  test0003.cpp  test0004.cpp  test0101.cpp  test0102.cpp  test0103.cpp  tests.h
